[gd_scene load_steps=6 format=3 uid="uid://byc0nl6mp3iyo"]

[ext_resource type="PhysicsMaterial" uid="uid://qn3epboss6av" path="res://barkley2/scenes/Objects/_interactiveActor/_pedestrians/o_mortageProle.tres" id="1_8bvm7"]
[ext_resource type="Script" uid="uid://jfvo2jkr16td" path="res://barkley2/scenes/Objects/_interactiveActor/_pedestrians/o_mortage_prole.gd" id="2_8bvm7"]
[ext_resource type="SpriteFrames" uid="uid://b50wn5ods7rks" path="res://barkley2/resources/B2_Pedestrians/s_ped_30.tres" id="3_47v4b"]
[ext_resource type="PackedScene" uid="uid://c54kloot7bcu2" path="res://barkley2/scenes/Objects/System/o_shadow.tscn" id="4_a8yk4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ju1ko"]
radius = 8.0

[node name="o_mortageProle" type="RigidBody2D" node_paths=PackedStringArray("my_shadow", "ActorAnim", "ActorCol", "ActorNav")]
collision_mask = 2
mass = 300.0
physics_material_override = ExtResource("1_8bvm7")
gravity_scale = 0.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 1
linear_damp_mode = 1
linear_damp = 500.0
script = ExtResource("2_8bvm7")
my_shadow = NodePath("o_Shadow")
ActorAnim = NodePath("ActorAnim")
has_collision = false
ActorCol = NodePath("ActorCol")
ActorNav = NodePath("ActorNav")
speed_normal = 100.0

[node name="ActorAnim" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = ExtResource("3_47v4b")
animation = &"stand"
offset = Vector2(0, -20)

[node name="ActorNav" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
neighbor_distance = 10.0
max_speed = 10000000.0
debug_enabled = true

[node name="ActorCol" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_ju1ko")
debug_color = Color(0.915, 0.023, 0.707, 0.022)

[node name="o_Shadow" parent="." instance=ExtResource("4_a8yk4")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
